Fixed tests. Implemeted a first version that returns all points.
